--- a/Data_analysis,/cluster_analysis.ipynb
+++ b/Data_analysis,/cluster_analysis.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the fans-also-like relationships using Yagmur's code\n",
+    "# get the fans-also-like relationships \n",
     "fans_also_like = {}\n",
     "for game in data:\n",
     "    game_id = game['id']\n",
